kubernettes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
spec:
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
        - name: my-react-app
          image: swathip123/app:v2  #0.0.10 13or 0.0.1
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-react-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: my-react-app
